@@ -1,3 +1,5 @@
+[B]2.2.1[/B]
+- Fixed: Unicode problem in the progress dialogs
 [B]2.2.0[/B]
 - Added: Progress updates during scans
 - Added: Strings for the progress updates for Dutch and English
